GN-157 Change footer z-index to zero to ensure it appears behind dropdowns on consultations

--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -12,7 +12,7 @@
   font-family: unquote($nds-font-family-sans);
   margin: rem($nds-spacing-large 0 0 0);
   position: relative;
-  z-index: 1;
+  z-index: 0;
 
   *,
   *:before,
